# SerialPort

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  pn532.cpp  pn532.h  serialport.cpp  serialport.h  thread.cpp  thread.h
test/: CMakeLists.txt  test_pn532.cpp
